--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Không mang folder .idea lên Server
+.idea/
+out/
+target/
+
+# Chặn tất cả các file có đuôi .iml
+*.iml
+
+# Chặn file cụ thể
+selenium.png
+JavaForTester2023.iml
